--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 
-pupil-labs-realtime-api==1.1.3
+pupil-labs-realtime-api
 python-dotenv==1.0.0
 pyzmq==25.1.1
-opencv-python==4.9.0.80
+opencv-python
